[gd_scene load_steps=5 format=3 uid="uid://bmvoe16fod6s1"]

[ext_resource type="Theme" uid="uid://tiki8lc6ldfh" path="res://art/theme.tres" id="1_0xauf"]
[ext_resource type="Script" path="res://scenes/ui.gd" id="1_s6qce"]
[ext_resource type="PackedScene" uid="uid://lmdujtfpll6q" path="res://scenes/locked_element.tscn" id="2_ucv8m"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_uy78a"]
size = Vector2(1024, 1024)

[node name="UI" type="CanvasLayer" node_paths=PackedStringArray("start_screen", "coins_text", "prize_element", "prize_label", "prize_text", "element_list", "discard_button", "end_screen", "end_list", "restart_button")]
script = ExtResource("1_s6qce")
new_element_scene = ExtResource("2_ucv8m")
start_screen = NodePath("Theme/StartScreen")
coins_text = NodePath("Theme/Game/Rerolling/Reroll/Counter")
prize_element = NodePath("Theme/PrizeElement")
prize_label = NodePath("Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/PrizeLabel")
prize_text = NodePath("Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/PrizeText")
element_list = NodePath("Theme/Game/LockedIn/VBoxContainer")
discard_button = NodePath("Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ButtonDiscard")
end_screen = NodePath("Theme/EndScreen")
end_list = NodePath("Theme/EndScreen/VBoxContainer")
restart_button = NodePath("Theme/EndScreen/VBoxContainer/Button")

[node name="Theme" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_0xauf")

[node name="Game" type="Control" parent="Theme"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LockedIn" type="MarginContainer" parent="Theme/Game"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1000.0
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Theme/Game/LockedIn"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Theme/Game/LockedIn/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Theme/Game/LockedIn/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
text = "LOCKED IN"
fit_content = true

[node name="Rerolling" type="MarginContainer" parent="Theme/Game"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1028.0
offset_right = -4.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="Reroll" type="VBoxContainer" parent="Theme/Game/Rerolling"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Counter" type="RichTextLabel" parent="Theme/Game/Rerolling/Reroll"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 300
text = "30"
fit_content = true
autowrap_mode = 0

[node name="Label" type="Label" parent="Theme/Game/Rerolling/Reroll"]
layout_mode = 2
text = "COINS REMAINING"
horizontal_alignment = 1

[node name="PrizeElement" type="MarginContainer" parent="Theme"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -562.0
offset_bottom = 562.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Theme/PrizeElement"]
layout_mode = 2
mouse_filter = 2
color = Color(0.87451, 0.835294, 0.847059, 1)

[node name="HboxContainer" type="HBoxContainer" parent="Theme/PrizeElement"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Theme/PrizeElement/HboxContainer"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_uy78a")

[node name="PanelContainer" type="PanelContainer" parent="Theme/PrizeElement/HboxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Theme/PrizeElement/HboxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="PrizeLabel" type="RichTextLabel" parent="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 80
text = "Favorite thing in the world:"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="PrizeText" type="Label" parent="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
text = "This is what you got so I guess you should probably be happy about it"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonLock" type="Button" parent="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "LOCK
IT IN"

[node name="ButtonDiscard" type="Button" parent="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "THROW
IT AWAY"

[node name="TextureRect2" type="TextureRect" parent="Theme/PrizeElement/HboxContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_uy78a")
flip_h = true

[node name="EndScreen" type="PanelContainer" parent="Theme"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Control" parent="Theme/EndScreen"]
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="Theme/EndScreen/Background"]
layout_mode = 2
offset_right = 3240.0
offset_bottom = 2000.0
color = Color(0.34902, 0.580392, 0.788235, 1)

[node name="MarginContainer3" type="MarginContainer" parent="Theme/EndScreen/Background"]
layout_mode = 2
offset_right = 3240.0
offset_bottom = 2000.0
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="ColorRect" type="ColorRect" parent="Theme/EndScreen/Background/MarginContainer3"]
layout_mode = 2
color = Color(0.925925, 0.902137, 0.921803, 1)

[node name="MarginContainer" type="MarginContainer" parent="Theme/EndScreen"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 300

[node name="RichTextLabel" type="RichTextLabel" parent="Theme/EndScreen/MarginContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "GACHAPON LIFE"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="Theme/EndScreen"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_right = 300

[node name="RichTextLabel" type="RichTextLabel" parent="Theme/EndScreen/MarginContainer2"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "ガチャポンライフ
"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Theme/EndScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1

[node name="Control" type="Control" parent="Theme/EndScreen/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Theme/EndScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "THE END"

[node name="StartScreen" type="PanelContainer" parent="Theme"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Control" parent="Theme/StartScreen"]
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="Theme/StartScreen/Background"]
layout_mode = 2
offset_right = 3240.0
offset_bottom = 2000.0
color = Color(0.34902, 0.580392, 0.788235, 1)

[node name="MarginContainer3" type="MarginContainer" parent="Theme/StartScreen/Background"]
layout_mode = 2
offset_right = 3240.0
offset_bottom = 2000.0
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="ColorRect" type="ColorRect" parent="Theme/StartScreen/Background/MarginContainer3"]
layout_mode = 2
color = Color(0.925925, 0.902137, 0.921803, 1)

[node name="MarginContainer" type="MarginContainer" parent="Theme/StartScreen"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 300

[node name="RichTextLabel" type="RichTextLabel" parent="Theme/StartScreen/MarginContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "GACHAPON LIFE"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="Theme/StartScreen"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_right = 300

[node name="RichTextLabel" type="RichTextLabel" parent="Theme/StartScreen/MarginContainer2"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ガチャポンライフ
"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Theme/StartScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Theme/StartScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Each level, spend coins to draw gachas until you're satisfied with what you got
"

[node name="Label2" type="Label" parent="Theme/StartScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "You only get to keep one gacha per level
"

[node name="Label3" type="Label" parent="Theme/StartScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "You get one new coin per level in addition to your starting coins"

[node name="Control" type="Control" parent="Theme/StartScreen/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Theme/StartScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 100
text = "BEGIN"

[connection signal="pressed" from="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ButtonLock" to="." method="_on_button_lock_pressed"]
[connection signal="pressed" from="Theme/PrizeElement/HboxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ButtonDiscard" to="." method="_on_button_discard_pressed"]
[connection signal="pressed" from="Theme/EndScreen/VBoxContainer/Button" to="." method="_on_end_button_pressed"]
[connection signal="pressed" from="Theme/StartScreen/VBoxContainer/Button" to="Theme/StartScreen" method="hide"]
